--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,5 +1,4 @@
 = form_tag items_path, :method => :get do
   = text_field_tag :q, @query
   = submit_tag 'Search', :name => nil
-- if @results
-  = @results.inspect
+= render @results
