--- a/app/views/layouts/items.html.haml
+++ b/app/views/layouts/items.html.haml
@@ -1,7 +1,10 @@
 !!! 5
 %html
   %head
-    %title Dress to Impress - Items
+    %title Infinite Closet
+    = stylesheet_link_tag 'compiled/screen'
   %body
-    = flashes
-    = yield
+    #container
+      %h1 Infinite Closet
+      = flashes
+      = yield
