style error messages

--- a/app/stylesheets/partials/_blue.sass
+++ b/app/stylesheets/partials/_blue.sass
@@ -1,13 +1,21 @@
 // Used internally:
+
 $background_color: #0b61a4
 $module_border_color: #033e6b
 $module_background_color: #66a3d2
 
 // Used by Blueprint:
+
 $font_color: #fff
-$header_color: #fff
-$link_color: #fff
-$link_hover_color: #fff
-$link_focus_color: #fff
-$link_active_color: #fff
-$link_visited_color: #fff
+
+$header_color: $font_color
+
+$link_color: $font_color
+$link_hover_color: $font_color
+$link_focus_color: $font_color
+$link_active_color: $font_color
+$link_visited_color: $font_color
+
+$error_color: $font_color
+$error_bg_color: #e14f1c
+$error_border_color: #cd0a0a
