style form elements

--- a/app/stylesheets/partials/_blue.sass
+++ b/app/stylesheets/partials/_blue.sass
@@ -4,18 +4,26 @@ $background_color: #0b61a4
 $module_border_color: #033e6b
 $module_background_color: #66a3d2
 
+$input_hover_border_color: #ff9200
+$input_focus_border_color: #fff
+
+$loud_button_background_color: #ff9200
+$loud_button_border_color: #ffad40
+$loud_button_color: #a65f00
+$loud_button_focus_border_color: #000
+
 // Used by Blueprint:
 
 $font_color: #fff
 
-$header_color: $font_color
+$header_color: inherit
 
-$link_color: $font_color
-$link_hover_color: $font_color
-$link_focus_color: $font_color
-$link_active_color: $font_color
-$link_visited_color: $font_color
+$link_color: inherit
+$link_hover_color: inherit
+$link_focus_color: inherit
+$link_active_color: inherit
+$link_visited_color: inherit
 
-$error_color: $font_color
+$error_color: inherit
 $error_bg_color: #e14f1c
 $error_border_color: #cd0a0a
