--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -4,6 +4,11 @@
 @import "blueprint";
 @import "compass";
 
+@mixin module {
+  background: $module_background_color;
+  border: 1px solid $module_border_color;
+}
+
 body {
   @include blueprint-typography(true);
   @include blueprint-utilities;
@@ -21,8 +26,32 @@ body {
   width: 800px;
 }
 
-form.bp {
-  @include blueprint-form; }
+form {
+  @include blueprint-form;
+  
+  input[type=text] {
+    @include module;
+    color: inherit;
+    &:hover {
+      border-color: $input_hover_border_color;
+    }
+    &:focus {
+      border-color: $input_focus_border_color;
+    }
+  }
+  
+  input[type=submit] {
+    background: $loud_button_background_color;
+    border: 1px solid $loud_button_border_color;
+    color: $loud_button_color;
+    cursor: pointer;
+    font-weight: bold;
+    padding: 5px;
+    &:focus {
+      border-color: $loud_button_focus_border_color;
+    }
+  }
+}
 
 .alert {
   @include error;
