--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -68,6 +68,7 @@ h1 a {
   @include inline-block;
   padding: 10px;
   text-align: center;
+  text-decoration: none;
   vertical-align: top;
   width: 100px;
   img {
@@ -77,3 +78,5 @@ h1 a {
     width: 80px;
   }
 }
+
+@import "items/show";
