--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -1,3 +1,3 @@
-= div_for item do
+= link_to item, :class => 'item' do
   = image_tag item.thumbnail_url, :alt => item.description, :title => item.description
   = item.name
