--- a/app/views/layouts/items.html.haml
+++ b/app/views/layouts/items.html.haml
@@ -3,8 +3,11 @@
   %head
     %title Infinite Closet
     = stylesheet_link_tag 'compiled/screen'
-  %body
+  %body{:class => params[:action]}
     #container
       %h1= link_to 'Infinite Closet', items_path
       = flashes
+      = form_tag items_path, :method => :get do
+        = text_field_tag :q, @query
+        = submit_tag 'Search', :name => nil
       = yield
