add description, restyle header a bit

--- a/app/stylesheets/items/_show.scss
+++ b/app/stylesheets/items/_show.scss
@@ -1,20 +1,21 @@
 body.show {
   header {
+    border-bottom: 1px solid $module_border_color;
     display: block;
+    margin-bottom: 1em;
+    padding: 1em 0;
   }
   
   #item-thumbnail {
     @include inline-block;
     border: 1px solid $module_border_color;
     height: 80px;
-    margin-right: -.5em;
+    margin-right: .5em;
     width: 80px;
   }
   
   #item-name {
     @include inline-block;
-    border-bottom: 1px solid $module_border_color;
-    margin: 0;
-    padding: 0 1em 0 1em;
+    margin-top: 1em;
   }
 }
