--- a/app/stylesheets/items/_show.scss
+++ b/app/stylesheets/items/_show.scss
@@ -18,4 +18,18 @@ body.show {
     @include inline-block;
     margin-top: 1em;
   }
+  
+  #item-preview div {
+    float: left;
+    width: 50%;
+  }
+  
+  #item-preview-swf {
+    height: 50%;
+  }
+  
+  #item-preview img {
+    height: 50px;
+    width: 50px;
+  }
 }
