move species supported images for item show into pet_type method

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -7,7 +7,7 @@
 %h3 Preview
 
 #item-preview
-  #item-preview-species= standard_species_images
+  #item-preview-species= standard_species_images(@item.supported_species)
   #item-preview-swf
     Javascript and Flash are required to preview wearables. Sorry!
 
