--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -567,17 +567,31 @@ body.show #item-name {
   *vertical-align: auto;
   margin-top: 1em;
 }
-/* line 22, ../../../app/stylesheets/items/_show.scss */
+/* line 23, ../../../app/stylesheets/items/_show.scss */
 body.show #item-preview div {
   float: left;
   width: 50%;
 }
-/* line 27, ../../../app/stylesheets/items/_show.scss */
-body.show #item-preview-swf {
-  height: 50%;
-}
-/* line 31, ../../../app/stylesheets/items/_show.scss */
-body.show #item-preview img {
+/* line 28, ../../../app/stylesheets/items/_show.scss */
+body.show #item-preview a, body.show #item-preview img {
   height: 50px;
   width: 50px;
+}
+/* line 33, ../../../app/stylesheets/items/_show.scss */
+body.show #item-preview a {
+  display: -moz-inline-box;
+  -moz-box-orient: vertical;
+  display: inline-block;
+  vertical-align: middle;
+  *display: inline;
+  *vertical-align: auto;
+}
+/* line 35, ../../../app/stylesheets/items/_show.scss */
+body.show #item-preview a.current {
+  background: #66a3d2;
+  outline: 1px solid #033e6b;
+}
+/* line 42, ../../../app/stylesheets/items/_show.scss */
+body.show #item-preview-swf {
+  height: 50%;
 }
