slightly restyle preview

--- a/app/stylesheets/items/_show.scss
+++ b/app/stylesheets/items/_show.scss
@@ -40,6 +40,8 @@ body.show {
   }
   
   #item-preview-swf {
-    height: 50%;
+    height: 300px;
+    overflow: hidden;
+    width: 300px;
   }
 }
