--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -8,6 +8,7 @@
 
 #item-preview
   #item-preview-species= standard_species_images(@item.supported_species)
+  #item-preview-error
   #item-preview-swf{'data-impress-host' => RemoteImpressHost}
     Javascript and Flash are required to preview wearables. Sorry!
 
