add negation to index explanation

--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -21,6 +21,10 @@
       %dd returns any item with the words "floating" and "doll" in it
       %dt "easter negg"
       %dd returns any item with the phrase "easter negg" in it
+      %dt "altador cup" -background
+      %dd
+        returns any item with the phrase "altador cup" in it, but not the word
+        "background"
       %dt species:shoyru
       %dd returns any item a Shoyru can wear
       
