add description of only:species filter

--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -27,6 +27,8 @@
         "background"
       %dt species:shoyru
       %dd returns any item a Shoyru can wear
+      %dt only:shoyru
+      %dd returns any item only a Shoyru can wear
       
   #species-search-links
     %h2 Can't decide? Search by species
