--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -1,144 +1,13 @@
-@import "blueprint/reset";
-// The blue color scheme
-@import "partials/blue";
-@import "blueprint";
 @import "compass";
-
-@mixin module {
-  background: $module_background_color;
-  border: 1px solid $module_border_color;
-}
+@import "clean_constants";
 
 body {
-  @include blueprint-typography(true);
-  @include blueprint-utilities;
-  @include blueprint-debug;
-  @include blueprint-interaction;
-  
-  background: $background_color;
-  font: {
-    family: Delicious, Helvetica, Arial, sans-serif;
-    size: 100%;
-  }
-  line-height: 1;
   text-align: center;
 }
 
-#container {
-  margin: 0 auto;
-  padding: 1em 2em 1em;
-  text-align: center;
-  width: 800px;
-}
-
-form {
-  @include blueprint-form;
-  
-  input[type=text] {
-    @include module;
-    color: inherit;
-    &:hover {
-      border-color: $input_hover_border_color;
-    }
-    &:focus {
-      border-color: $input_focus_border_color;
-    }
-  }
-  
-  input[type=submit] {
-    background: $loud_button_background_color;
-    border: 1px solid $loud_button_border_color;
-    color: $loud_button_color;
-    cursor: pointer;
-    font-weight: bold;
-    padding: 5px;
-    &:focus {
-      border-color: $loud_button_focus_border_color;
-    }
-  }
-}
-
-.alert {
-  @include error;
-}
-
-h1 a {
-  text-decoration: none;
-  &:hover {
-    text-decoration: underline;
-  }
-}
-
-.item {
-  @include inline-block;
-  padding: 10px;
-  text-align: center;
-  text-decoration: none;
-  vertical-align: top;
-  width: 100px;
-  img {
-    display: block;
-    height: 80px;
-    margin: 0 auto;
-    width: 80px;
-  }
-}
-
-a {
-  img {
-    @include opacity(.9);
-  }
-  &:hover, &:focus {
-    img {
-      @include opacity(1);
-    }
-  }
-}
-
-#impress-link {
-  font: {
-    size: 125%;
-    weight: bold;
-  }
-  left: .5em;
-  padding: .5em;
-  text-decoration: none;
-  top: .5em;
-  position: absolute;
-  
-  &:before {
-    content: "<< ";
-  }
-  
-  &:hover {
-    background: $module_background_color;
-  }
-  
-  span {
-    text-decoration: underline;
-  }
-}
-
-/* A font by Jos Buivenga (exljbris) -> www.exljbris.nl */
-@font-face {
-	font-family: Delicious;
-	src: url('http://impress.openneo.net/assets/fonts/Delicious-Roman.otf');
-}
-
-@font-face {
-	font: {
-	  family: Delicious;
-	  weight: bold;
-  }
-	src: url('http://impress.openneo.net/assets/fonts/Delicious-Bold.otf');
-}
-
-@font-face {
-	font: {
-	  family: Delicious;
-	  style: italic;
-  }
-	src: url('http://impress.openneo.net/assets/fonts/Delicious-Italic.otf');
+input[type=text] {
+  font-size: 125%;
+  width: 15em;
 }
 
 @import "items/index";
