--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -29,6 +29,8 @@
       %dd returns any item a Shoyru can wear
       %dt only:shoyru
       %dd returns any item only a Shoyru can wear
+      %dt type:hat
+      %dd returns any item that fills a "hat" zone
       
   #species-search-links
     %h2 Can't decide? Search by species
