--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -1,3 +1,4 @@
-= link_to item_path(item, :q => @query), :class => 'item' do
-  = image_tag item.thumbnail_url, :alt => item.description, :title => item.description
-  = item.name
+.object
+  = link_to item_path(item, :q => @query) do
+    = image_tag item.thumbnail_url, :alt => item.description, :title => item.description
+    = item.name
