add remote tracking code

--- a/app/views/layouts/items.html.haml
+++ b/app/views/layouts/items.html.haml
@@ -4,6 +4,7 @@
     %title Infinite Closet
     = stylesheet_link_tag "http://#{RemoteImpressHost}/assets/css/clean/layout.css"
     = stylesheet_link_tag "compiled/screen"
+    = javascript_include_tag "http://#{RemoteImpressHost}/assets/js/analytics.js"
   %body{:class => params[:action]}
     #container
       %h1
