--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -15,20 +15,16 @@
   #search-help
     %h2 Find what you're looking for
     %dl
-      %dt negg
-      %dd returns any item with the word "negg" in it
-      %dt floating doll
-      %dd returns any item with the words "floating" and "doll" in it
-      %dt "easter negg"
-      %dd returns any item with the phrase "easter negg" in it
-      %dt "altador cup" -background
+      %dt kreludor  "altador cup" -background
       %dd
-        returns any item with the phrase "altador cup" in it, but not the word
-        "background"
+        returns any item with the word "kreludor" and the phrase "altador cup"
+        in it, but not the word "background"
+      %dt blue is:nc
+      %dd returns any NC Mall item with the word "blue" in it
+      %dt blue -is:nc
+      %dd returns any non-NC item with the word "blue" in it
       %dt species:shoyru
       %dd returns any item a Shoyru can wear
-      %dt only:shoyru
-      %dd returns any item only a Shoyru can wear
       %dt type:hat
       %dd returns any item that fills a "hat" zone
       
